# tdscha

./: README.md  README.rst  RELEASE_1.6.1.md  meson.build  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: docs.yml  python-app.yml  python-testsuite.yml
.ipynb_checkpoints/: requirements-checkpoint.txt
CModules/: Lanczos.cpp  Lanczos.hpp  LanczosFunctions.c  LanczosFunctions.h  Makefile  Utils.cpp  Utils.hpp  main.cpp  odd_corr_module.c  tdscha-lanczos.x
CModules/.ipynb_checkpoints/: LanczosFunctions-checkpoint.h  Makefile-checkpoint  Utils-checkpoint.cpp  main-checkpoint.cpp
Docker/: Dockerfile
Examples/Comparison/: convergence.py  normal.py  normal.py~  static_freq.txt  wigner.py~
Examples/Comparison/.ipynb_checkpoints/: comparison-checkpoint.py  info-checkpoint.txt  wigner-checkpoint.py
Examples/H2/: freq_stat.txt  imag_G.npy  make_plot.py  real_G.npy  spectral.ipynb
Examples/H2/.ipynb_checkpoints/: H2_lanczos-checkpoint.py  H2_relax-checkpoint.py  spectral-checkpoint.ipynb  wigner-checkpoint.ipynb
Examples/H2/H2_data/: LinearSCHA_minimization_E=1e-03  dyn_01  final_dyn1
Examples/H2/Lanczos_H2_0/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz
Examples/H2/Lanczos_H2_1/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz
Examples/H2/Lanczos_H2_2/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz
Examples/H2/Lanczos_H2_wigner_0/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz  tdscha_lanczos_STEP3.npz
Examples/H2/Lanczos_H2_wigner_1/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz  tdscha_lanczos_STEP3.npz
Examples/H2/Lanczos_H2_wigner_2/: tdscha_lanczos_STEP1.npz  tdscha_lanczos_STEP2.npz
Examples/H2/ensemble_H2/: energies_pop1.npy  forces_pop1.npy  xats_pop1.npy
Examples/OLD_example_two_ph_TDSCHA/: figure.eps  final_dyn_T400_2  final_dyn_T400_3  final_dyn_T400_4  raman_tensors.npy  script_2ph.py
Examples/OLD_example_two_ph_TDSCHA/.ipynb_checkpoints/: run-checkpoint.sh
Examples/OLD_example_two_ph_TDSCHA/structures/: strcutre_00000.scf  strcutre_00007.scf  strcutre_00009.scf  strcutre_00011.scf  strcutre_00012.scf  strcutre_00013.scf  strcutre_00015.scf  strcutre_00018.scf  strcutre_00019.scf  strcutre_00022.scf  strcutre_00024.scf  strcutre_00026.scf  strcutre_00028.scf  strcutre_00029.scf  strcutre_00030.scf  strcutre_00032.scf  strcutre_00033.scf  strcutre_00037.scf  strcutre_00039.scf  strcutre_00041.scf  strcutre_00043.scf  strcutre_00045.scf  strcutre_00047.scf
Examples/SimpleExample/: example.py
Examples/Templates/: get_spectral_function.py  prepare_input_for_cluster.py  restart_run.py  run_local.py
Examples/Templates/.ipynb_checkpoints/: get_spectral_function-checkpoint.py  run_local-checkpoint.py
Examples/TestLanczosFiniteTemperature/SnTe_test/: sscha_minimization.py
Examples/UnpolarizedRaman/: README  README~  dyn1  final_dyn1  prepare_cluster_lanczos.py  run.py  save_gf.py
Examples/UnpolarizedRaman/data/: dyn_gen_pop0_1  (+4 more)
Examples/example_two_ph_TDSCHA/: final_dyn_T400_1  generate_script.sh  plot.py
Examples/ir_spectrum/: compute_ir.py  plot_results.py
Examples/qspace_lanczos/: compute_spectral_Xpoint.py
Modules/: DynamicalLanczos.py  Parallel.py  Perturbations.py  QSpaceHessian.py  QSpaceKPM.py  QSpaceLanczos.py  SchaMinimizer.py  StaticHessian.py  Tools.py  __init__.py  cli.py  tdscha_core.jl  tdscha_qspace.jl
Modules/.ipynb_checkpoints/: Dynamical-checkpoint.py  DynamicalLanczos-checkpoint.py  Perturbations-checkpoint.py
Modules/testing/: __init__.py  test_data.py
SCHAModules/: get_odd_straight.f90
TDSCHA/: Manifest.toml  Project.toml
TDSCHA/src/: TDSCHA.jl
Tutorials/H3S/: Automatic_Calculations.ipynb
Tutorials/LaH10/: VariableCellRelaxation.ipynb
docs/: cli.md  examples.md  index.md  installation.md  kpm.md  qspace-hessian.md  quickstart.md  static-hessian.md  theory.md  usage.md
docs/api/: dynamical_lanczos.md  qspace_hessian.md  qspace_lanczos.md  static_hessian.md
report/: GoParallelTuple_bug.md  benchmark_output_reduced_overhead.txt  profiling_report.md  timing.txt
scripts/: plot_hessian_convergence.py  plot_lanczos_convergence.py  tdscha-convergence-analysis.py  tdscha-output2abc.py  tdscha-plot.py  validate_docs.py
scripts/.ipynb_checkpoints/: plot_hessian_convergence-checkpoint.py  plot_lanczos_convergence-checkpoint.py
tests/: test_continued_fraction.py
tests/test_bicg/: test_bicg.py
tests/test_effective_charges/: final_dyn1  test_effective_charges_deriv.py
tests/test_fast_lanczos_1D/: test_1d_fast.py
tests/test_fast_lanczos_snse/: test_fast_lanczos_snse.py
tests/test_julia/: LANCZOS_STEP5.npz  _mpi_worker.py  test_gamma_only.py  test_julia.py  test_julia_wigner.py  test_lanczos.py  test_mpi_parallel.py  test_wigner_vs_nowigner.py
tests/test_lanczos_fast/: LANCZOS_STEP10.npz  LANCZOS_STEP5.npz  test_julia.py  test_julia_lf.py  test_lanczos_fast_rt.py
tests/test_qspace/: plot_qspace.py  test_distributed.py  test_estimate_kpm_steps.py  test_hessian_v3v4_flags.py  test_ir_modulus.py  test_qirr.py  test_qspace_hessian.py  test_qspace_kpm.py  test_qspace_lanczos.py  test_qspace_noinvq.py  test_raman_modulus.py
tests/test_raman_unpol/: dyn_pop1_1  dyn_pop1_2  dyn_pop1_3  raman_tensor_eq.npy  raman_v_0.npy  raman_v_1.npy  raman_v_2.npy  raman_v_3.npy  raman_v_4.npy  raman_v_5.npy  raman_v_6.npy  test_unpolarized_raman.py
(+353 files in other folders)
